<resources>
    <string name="app_name">Calculadora</string>
    <string name="text_history">6,291÷5</string>
    <string name="text_calculate_now">1,258.2</string>
    <string name="text_button_clear">C</string>
    <string name="text_more_and_less">+/-</string>
    <string name="text_percentage">%</string>
    <string name="text_division">÷</string>

    <string name="text_seven">7</string>
    <string name="text_eight">8</string>
    <string name="text_nine">9</string>
    <string name="text_multiplication">X</string>

    <string name="text_four">4</string>
    <string name="text_five">5</string>
    <string name="text_six">6</string>
    <string name="text_subtraction">-</string>

    <string name="text_one">1</string>
    <string name="text_two">2</string>
    <string name="text_tree">3</string>
    <string name="text_plus">+</string>

    <string name="text_dot">.</string>
    <string name="text_zero">0</string>
    <string name="text_delete">del</string>
    <string name="text_equal">=</string>
</resources>